--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://bolt2000.github.io/project-ccs-html",
+  "homepage": "https://bolt2000.github.io/project-css-html",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-ccs-html/"
+    "build": "parcel build src/*.html --public-url /project-css-html/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bolt2000/parcel-project-template.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
